--- a/stingeripc/templates/python/server.py.jinja2
+++ b/stingeripc/templates/python/server.py.jinja2
@@ -44,8 +44,8 @@ class MethodResponseBuilder:
         self._response["result"] = result_code.value
         return self
 
-    def return_value(self, return_value):
-        self._response["returnValue"] = return_value
+    def return_value(self, value_name: str, return_value):
+        self._response[value_name] = return_value
         return self
 
 
@@ -139,7 +139,7 @@ class {{stinger.name}}Server(object):
             if True:
             {%endif%}
                 {%if method.return_value_list|length == 1%}
-                response_builder.return_value(return_value)
+                response_builder.return_value("{{method.return_value.name}}", return_value)
                 {%elif method.return_value_list|length > 1%}
                 FIXME: Implement this
                 {%endif%}
