--- a/stingeripc/templates/python/connection.py.jinja2
+++ b/stingeripc/templates/python/connection.py.jinja2
@@ -4,13 +4,12 @@ from typing import Callable, Optional, Tuple
 from paho.mqtt import client as mqtt_client
 from queue import Queue, Empty
 from abc import ABC, abstractmethod
-from enum import Enum
+from method_codes import *
+
 
 logging.basicConfig(level=logging.DEBUG)
 
-class MethodResultCode(Enum):{%for rc_i, rc_name in stinger.method_return_codes.items()%}
-    {{rc_name | CONST_CASE}} = {{rc_i}}
-    {%-endfor%}
+
 
 class BrokerConnection(ABC):
     
