Method: C++ Multipart return values.

--- a/stingeripc/templates/cpp/examples/server_main.cpp.jinja2
+++ b/stingeripc/templates/cpp/examples/server_main.cpp.jinja2
@@ -22,7 +22,7 @@ int main(int argc, char** argv) {
     server.register{{method_name | UpperCamelCase}}Handler([]({%for arg in method.arg_list%}{{arg.cpp_type}} unused{{loop.index}}{%if not loop.last%}, {%endif%}{%endfor%}) -> {{method.return_value.cpp_type}}
     {
         std::cout << "Received call for {{method_name}}\n";
-        return {{method.return_value.get_random_example_value()}};
+        return {{method.return_value.get_random_example_value('c++')}};
     });
     {%endfor%}
     std::cout << "Press Enter to exit\n"; 
