--- a/stingeripc/templates/cpp/include/server.hpp.jinja2
+++ b/stingeripc/templates/cpp/include/server.hpp.jinja2
@@ -13,6 +13,7 @@
 
 #include "ibrokerconnection.hpp"
 #include "enums.hpp"
+#include "return_types.hpp"
 
 class {{stinger.name | UpperCamelCase}}Server {
 
