--- a/stingeripc/templates/python/server.py.jinja2
+++ b/stingeripc/templates/python/server.py.jinja2
@@ -129,19 +129,19 @@ class {{stinger.name}}Server(object):
                 response_builder.result_code(MethodResultCode.SERVER_ERROR).debug_result_message(str(e))
             else:
                 response_builder.result_code(MethodResultCode.SUCCESS)
-            {%if method.return_value_list|length > 1 -%}
-            if len(return_value) != {{method.return_value_list|length}}:
-                response_builder.result_code(MethodResultCode.SERVER_ERROR).debug_result_message(f"The server code generated the wrong number ({len(return_value)})of return values ({{method.return_value_list|length}} expected).")
-                self._logger.error("The '{{method_name}}' method returned an incorrect number of return values")
-            else:
-            {%else%}
-            if True:
+            {%macro build_response(arg, var)%}
+            response_builder.return_value("{{arg.name}}", {{var}})
+            {%endmacro%}
+            {%if method.return_value.arg_type.name.lower() == 'struct'%}
+            {%for arg in method.return_value.members%}
+            {{build_response(arg, "return_value['"+arg.name+"']")}}
+            {%endfor%}
+            {%elif method.return_value.arg_type.name.lower() == 'value'%}
+            {{build_response(method.return_value, "return_value['"+method.return_value.name+"']")}}
+            {%elif method.return_value.arg_type.name.lower() == 'enum'%}
+            {{build_response(method.return_value, "return_value['"+method.return_value.name+"'].value")}}
             {%endif%}
-                {%if method.return_value_list|length == 1%}
-                response_builder.return_value("{{method.return_value.name}}", return_value)
-                {%elif method.return_value_list|length > 1%}
-                FIXME: Implement this
-                {%endif%}
+
             if response_builder.is_valid():
                 response_topic = f"{{method.response_topic("{payload['clientId']}")}}"
                 self._conn.publish(response_topic, json.dumps(response_builder.response), qos=1, retain=False)
